--- a/02-PlayVideo/02-PlayVideo.vcxproj.filters
+++ b/02-PlayVideo/02-PlayVideo.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\fromCamera.cpp">
+    <ClCompile Include="src\Example2-4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
