--- a/03-save-pic-vid/03-save-pic-vid.vcxproj
+++ b/03-save-pic-vid/03-save-pic-vid.vcxproj
@@ -27,7 +27,7 @@
     <ProjectGuid>{5ab0b7c1-c71c-4f32-b7f5-c4bee1e493ff}</ProjectGuid>
     <RootNamespace>_03_save_pic_vid</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>save-pic-vid</ProjectName>
+    <ProjectName>Save Images and Videos to File</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
